Add SMTP .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -16,3 +16,8 @@ NEXTAUTH_URL=http://localhost:3000
 
 FRONTEND_URL=http://localhost:3000
 
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-name@gmail.com
+SMTP_PASSWORD=your-app-password
+MAIL_FROM=no-reply@gmail.com
